--- a/frontend/src/components/AdminLogin/loginApp.css
+++ b/frontend/src/components/AdminLogin/loginApp.css
@@ -1,6 +1,3 @@
-* {
-  overflow-y: hidden;
-}
 input[type="text"] {
   background-color: aliceblue;
   color: black;
@@ -16,6 +13,40 @@ input[type="password"] {
 }
 input[type="password"]:focus {
   background-color: white;
+}
+input[type="url"] {
+  background-color: aliceblue;
+  color: black;
+  padding: 5px;
+}
+input[type="url"]:focus {
+  background-color: white;
+}
+input[type="number"] {
+  background-color: aliceblue;
+  color: black;
+  padding: 5px;
+}
+input[type="number"]:focus {
+  background-color: white;
+}
+textarea {
+  background-color: aliceblue;
+  color: black;
+  padding: 5px;
+}
+textarea:focus {
+  background-color: white;
+}
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
+
+input[type="number"] {
+  appearance: textfield;
+  -moz-appearance: textfield;
 }
 .submit-btn {
   background-color: maroon;
@@ -35,4 +66,46 @@ input[type="password"]:focus {
   width: fit-content;
   padding: 20px;
   background-color: rgba(128, 0, 0, 0.5);
+}
+/* Modal Overlay */
+.modal-overlay {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.5); /* Translucent background */
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+/* Modal */
+.modal {
+  background-color: white;
+  padding: 20px;
+  border-radius: 5px;
+}
+
+/* Modal Buttons */
+.modal-buttons {
+  display: flex;
+  justify-content: space-between;
+  color: #fff;
+  transition: background-color 0.3s ease;
+  margin-top: 10px;
+}
+.modal-button {
+  display: flex;
+  justify-content: space-between;
+  color: #fff;
+  border: none;
+  padding: 5px 10px;
+  background-color: maroon;
+  cursor: pointer;
+  transition: background-color 0.3s ease;
+  margin-top: 10px;
+}
+.modal-button:hover {
+  background-color: #8b0000;
 }
